version 1.1
	* Temporary files created by the instrument ant task and merge
	  ant task are now deleted after the ant task finishes.
	* Switch the instrumentation classes to use ASM instead of
	  Apache BCEL.  There are three benefits to this:
	  1. BCEL was throwing exceptions with some source code compiled
	     with JDK 1.5--ASM works fine.
	  2. ASM is licensed under the revised BSD license, which
	     is compatable with the GPL, which allows us to remove
	     the questionable exception for BCEL.
	  3. Instrumentation is about 5 times faster with ASM than BCEL.

version 1.0
	* Forked jcoverage 1.0.5 (although the version in the source says 1.0.4).
	  All original code is copyright 2003 jcoverage ltd.  Kurt Guenther
	  highlighted a bug in the branch coverage, was was fixed.
	* Applied a patch from Joakim Erdfelt to fix a bug where jcoverage
	  would fail to instrument classes if you attempted to instrument a
	  very large number of classes (in the hundreds).
	* Rewrote the HTML reporting and included code complexity in the output.