@@ -2,7 +2,7 @@
 src.dir=src
 
 # The path to cobertura.jar
-cobertura.dir=../../
+cobertura.dir=../..
 
 # Third party libraries that are also shipped with Cobertura can be
 # found in this directory
